--- a/documentation/latex/chapter-installation.tex
+++ b/documentation/latex/chapter-installation.tex
@@ -15,6 +15,6 @@ Common user can use bundle provided with this documentation. There is only neede
 
 Advanced user can use tutorial in Eclipse application. From menu "Help-> Install new software" can  install Reprotool from update site located on project website main page located at \href{http://code.google.com/a/eclipselabs.org/p/reprotool/}{http://code.google.com/a/eclipselabs.org/p/reprotool/}.
 
-For developers is described detailed manual at project wiki pages  located at  \href{http://code.google.com/a/eclipselabs.org/p/reprotool/wiki/}{http://code.google.com/a/eclipselabs.org/p/reprotool/wiki/} in section DevelopmentEnvironment. There ale described instruction for main dependencies like XText 2.1+, GEF and EMF.
+For developers is described detailed manual at project wiki pages  located at  \href{http://code.google.com/a/eclipselabs.org/p/reprotool/wiki/}{http://code.google.com/a/eclipselabs.org/p/reprotool/wiki/} in section DevelopmentEnvironment. There are described instruction for main dependencies like XText 2.1+, GEF and EMF.
 
 
