--- a/documentation/latex/reprotool.tex
+++ b/documentation/latex/reprotool.tex
@@ -174,7 +174,9 @@
   \include{chapter-lts}
   \include{chapter-linguistics}
   \include{chapter-installation}
-  \include{chapter-tutorial}
+  \appendix
+  \include{appendix-list-of-plugins}
+%  \include{chapter-tutorial}
 
 \bibliographystyle{splncs03}
 \bibliography{bibfile,bibfile-nusmv,bibfile-eclipse,bibfile-linguistics}
