a couple of typos fixed

--- a/documentation/latex/chapter-linguistics.tex
+++ b/documentation/latex/chapter-linguistics.tex
@@ -5,7 +5,7 @@ One of the main parts of Reprotool project is an automatic text analysis. This p
 \subsection{Introduction}
 Process of linguistics analysis gets natural language sentences as an input and returns analyzed usecases as is shown at figure \ref{fig:LinguisticsAnalyseSmall}. Whole process is divided into two parts: process of parsing and core analysis. Parsing contains main linguistics operations which are tokenization, tagging, parsing and lemmatization. Core work of parsing process is done by popular external linguistic analysis tools described in section \ref{sec:externaltools}. Core analysis converts parsed sentence trees with annotations into our usecases model. This process is described in more detail in section \ref{sec:analysis}. 
 
-It is recommended to see section \ref{sec:analyser}, where is also located our linguistic model at figure \ref{fig:ReprotoolLingModel}.
+It is recommended to see section \ref{sec:analyzer}, where is also located our linguistic model at figure \ref{fig:ReprotoolLingModel}.
 
 \begin{itemize}
 \item {\bf Text preparation} Cleaning up input text and tokenization
